# Music-Genre-Insights

./: .env.example  .gitignore  CSCI 467 Project.ipynb  Makefile  README.md  config.py  pyproject.toml  requirements.txt
data/processed/: metadata.json  test.parquet  val.parquet
data/processed/audio/: full.parquet  metadata.json  test.parquet  train.parquet  val.parquet
data/processed/lyrics/: metadata.json
reports/: presentation.pptx  tune_results.json
reports/audio/gmm/: metrics.json
reports/audio/kmeans/: metrics.json
reports/audio/knn/: metrics.json
reports/audio/logistic/: metrics.json
reports/audio/pca/: metrics.json
reports/audio/xgboost/: metrics.json
reports/gmm/: metrics.json
reports/kmeans/: metrics.json
reports/knn/: metrics.json
reports/logistic/: metrics.json
reports/lyrics/gmm/: metrics.json
reports/lyrics/kmeans/: metrics.json
reports/lyrics/knn/: metrics.json
reports/lyrics/logistic/: metrics.json
reports/lyrics/pca/: metrics.json
reports/lyrics/xgboost/: metrics.json
reports/pca/: metrics.json
reports/xgboost/: metrics.json
scripts/: eda.py  generate_fake_data.py  run_pipeline.py  scrape_supplemental.py  train.py  train_unsupervised.py  validate_output.py
src/: __init__.py  api_scraper.py  balancer.py  data_loader.py  dataset_matcher.py  feature_engineering.py  genre_mapper.py  language_filter.py  lyrics_cleaner.py  pipeline.py  splitter.py  utils.py
src/models/: classifiers.py  evaluation.py  features.py  unsupervised.py  unsupervised_evaluation.py
tests/: conftest.py  test_dataset_matcher.py  test_genre_mapper.py  test_lyrics_cleaner.py
