[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cade-data-pipeline"
version = "1.0.0"
description = "Data scraping & preprocessing pipeline for music sentiment / genre classification (Cade's role)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cade Miller" }]
license = { text = "MIT" }
keywords = ["music", "nlp", "genre-classification", "sentiment-analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "ftfy>=6.1",
    "langdetect>=1.0.9",
    "Unidecode>=1.3",
    "rapidfuzz>=3.5",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "lyricsgenius>=3.0",
    "spotipy>=2.23",
    "requests>=2.31",
    "tenacity>=8.2",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "black>=23.0"]
plots = ["matplotlib>=3.8", "seaborn>=0.13"]

[project.scripts]
cade-pipeline = "scripts.run_pipeline:main"
cade-validate = "scripts.validate_output:main"
cade-eda      = "scripts.eda:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
